--- a/css/base.css
+++ b/css/base.css
@@ -57,6 +57,62 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 
+/*
++++++++++++++++++++++++++++++++++++++++++++++++++++++++🏷️👇MAIN👇🏷️++++++++++++++++++++++++++++++++++++++++++++++++++++++
+_______________________________________________________________________________________________________________________________*/
+
+
+
+main {
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23e0f4fc' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");
+    padding: 0;
+    z-index: -100;
+}
+
+section {
+    /* block-size: 100vh;
+    scroll-snap-align: center;
+    scroll-snap-stop: always; */
+    position: relative;
+}
+
+.section-heading {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    color: #00308a;
+    text-align: center;
+    text-decoration: overline;
+    text-decoration-color: #478ff9;
+    text-decoration-thickness: 6px;
+}
+
+.dark-bg {
+    background-color: rgb(223, 220, 220);
+    opacity: 0.6;
+    transition: all 0.5s ease-in-out;
+}
+
+
+/*
++++++++++++++++++++++++++++++++++++++++++++++++++++++++🏷️👇CONTACT SECTION👇🏷️+++++++++++++++++++++++++++++++++++++++++++++++
+_______________________________________________________________________________________________________________________________*/
+
+
+
+#contact {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    margin-top: 15vh;
+}
+
+#contact iframe {
+    grid-column: 1/7;
+    grid-row: 1/3;
+}
+
+
 
 /* 
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++⚙️👇COMPONENTS👇⚙️++++++++++++++++++++++++++++++++++++++++++++++++++++++
