--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -76,7 +76,8 @@ header h1 {
     align-items: center;
 }
 
-header p {
+header button {
+    all:unset;
     position: absolute;
     top: 0px;
     right: 7vw;
@@ -115,28 +116,12 @@ ________________________________________________________________________________
 
 
 main {
-    background-color: #ffffff;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23e0f4fc' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");
     padding: 0;
-    z-index: -100;
 }
 
 .section-heading {
-    grid-column: 1/7;
-    grid-row: 1/2;
-    color: #00308a;
     font-size: 36px;
-    text-align: center;
     letter-spacing: 3px;
-    text-decoration: overline;
-    text-decoration-color: #478ff9;
-    text-decoration-thickness: 6px;
-}
-
-.dark-bg{
-    background-color: rgb(223, 220, 220);
-    opacity: 0.6;
-    transition: all 0.5s ease-in-out;
 }
 
 
@@ -157,19 +142,111 @@ ________________________________________________________________________________
 }
 
 .profile-photo {
-    grid-column: 3/5;
+    position: absolute;
+    /* top: 13vh;
+    left: 50%;
+    transform: translateX(-50%); */
     grid-row: 3/5;
+    grid-column: 3/5;
     display: grid;
     place-self: center;
-    margin-top: 6vh;
     height: 20vh;
     width: 20vh;
-    /* border: 2px solid #000000; */
-    /* box-shadow: 2px 2px 10px rgb(255, 255, 255) inset; */
     border-radius: 50%;
     background: #1a1a1a url(../images/s2.jpg) no-repeat center center;
-    /* mix-blend-mode: darken; */
     background-size: contain;
+    border: 2px solid #478ff9;
+    z-index: 40;
+    cursor: pointer;
+}
+
+.profile-photo::after {
+    content: "";
+    position: absolute;
+    background-color: transparent;
+    border-radius: 50%;
+    width: 21.5vh;
+    height: 21.5vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    z-index: -1;
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    border-left: 2px solid #478ff9;
+    border-right: 2px solid #478ff9;
+    animation: rotate 5s linear infinite;
+}
+
+@keyframes rotate {
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+.dialog-bg {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+    height: 150vh;
+    background-color: rgba(0, 0, 0, 0.675);
+    z-index: 94;
+    display: none;
+}
+
+#profile-story {
+    position: fixed;
+    box-shadow: 1px 1px 10px rgb(0, 0, 0);
+    border-radius: 12px;
+    background-color: rgb(255, 255, 255);
+    top: 5vh;
+    left: 50%;
+    transform: translate(-50%, 0);
+    min-height: 90vh;
+    width: 30vw;
+    z-index: 95;
+    /* transform-style: preserve-3d; */
+}
+
+#profile-story button {
+    background-color: transparent;
+    font-size: 35px;
+    cursor: pointer;
+    position: absolute;
+    top: 1.5vh;
+    right: 2vw;
+}
+
+#resume-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 30vh;
+    width: 80vw;
+    border-radius: 12px;
+    z-index: 100;
+}
+
+#resume {
+    height: 100%;
+    width: 100%;
+    border-radius: 12px;
+}
+
+#resume-container button {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    color: white;
+    height: 40px;
+    width: 40px;
+    font-size: 30px;
+    background-color: transparent;
+    cursor: pointer;
+    z-index: 101;
 }
 
 #hi2 {
@@ -328,49 +405,49 @@ ________________________________________________________________________________
 .photo-prop:nth-child(1) {
     grid-column: 1/3;
     grid-row: 1/2;
-    background-image: url(../images/home2.png);
+    background-image: url(../images/home2.webp);
 }
 
 .photo-prop:nth-child(2) {
     grid-column: 3/7;
     grid-row: 1/2;
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/bg.webp);
 }
 
 .photo-prop:nth-child(3) {
     grid-column: 1/5;
     grid-row: 2/3;
-    background-image: url(../images/home2.png);
+    background-image: url(../images/home2.webp);
 }
 
 .photo-prop:nth-child(4) {
     grid-column: 5/7;
     grid-row: 2/3;
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/bg.webp);
 }
 
 .photo-prop:nth-child(5) {
     grid-column: 1/3;
     grid-row: 3/4;
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/bg.webp);
 }
 
 .photo-prop:nth-child(6) {
     grid-column: 3/7;
     grid-row: 3/4;
-    background-image: url(../images/home2.png);
+    background-image: url(../images/home2.webp);
 }
 
 .photo-prop:nth-child(7) {
     grid-column: 1/5;
     grid-row: 4/5;
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/bg.webp);
 }
 
 .photo-prop:nth-child(8) {
     grid-column: 5/7;
     grid-row: 4/5;
-    background-image: url(../images/home2.png);
+    background-image: url(../images/home2.webp);
 }
 
 @media (hover:hover) {
@@ -606,17 +683,8 @@ ________________________________________________________________________________
 
 
 #contact {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(2, 1fr);
     height: 140vh;
     padding: 0;
-    margin-top: 15vh;
-}
-
-#contact iframe {
-    grid-column: 1/7;
-    grid-row: 1/3;
 }
 
 
