--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -294,7 +294,7 @@ ________________________________________________________________________________
     letter-spacing: 0.8px;
     text-align: center;
     color: rgba(101, 101, 100, 0.975);
-    line-height: 30p;
+    line-height: 30px;
     width: 100%;
     /* border: 2px solid green; */
     z-index: 40;
@@ -502,6 +502,14 @@ ________________________________________________________________________________
     padding-top: 10vh;
 }
 
+#laptop-mockup {
+    grid-column: 1/7;
+    grid-row: 3/11;
+    background: url(../images/laptop-mockup.png) no-repeat center center;
+    background-size: contain;
+    mix-blend-mode: darken;
+    perspective: 1000px;
+}
 
 
 
@@ -638,7 +646,7 @@ ________________________________________________________________________________
 
 .mySwiper3 {
     grid-column: 4/7;
-    grid-row: 2/10;
+    grid-row: 2/9;
     margin-top: 5vh;
     width: 100%;
     height: 100%
@@ -660,8 +668,8 @@ ________________________________________________________________________________
     font-size: 25px;
     letter-spacing: 2px;
     text-align: center;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 4vh;
+    margin-bottom: 4vh;
     color: #00308a;
     /* text-decoration: underline; */
     text-decoration-color: #478ff9;
@@ -680,7 +688,7 @@ ________________________________________________________________________________
 
 .swiper-slide-class ul li {
     border: 1px dashed #478ff9;
-    height: 70px;
+    height: 60px;
     width: 120px;
     display: grid;
     place-items: center;
