--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -255,7 +255,7 @@ ________________________________________________________________________________
     grid-row: 5/6;
     margin-top: 6vh;
     font-size: 55px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Garamond', sans-serif;
     letter-spacing: 2px;
     text-align: center;
     /* -webkit-text-stroke: 1px;
@@ -434,55 +434,61 @@ ________________________________________________________________________________
 .photo-prop:nth-child(1) {
     grid-column: 1/2;
     grid-row: 1/3;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo1.webp);
 }
 
 .photo-prop:nth-child(2) {
     grid-column: 2/4;
     grid-row: 1/3;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo2.webp);
+    background-size: 115%;
 }
 
 .photo-prop:nth-child(3) {
     grid-column: 4/5;
     grid-row: 1/3;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo3.webp);
 }
 
 .photo-prop:nth-child(4) {
     grid-column: 5/7;
     grid-row: 1/3;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo4.webp);
 }
 
 .photo-prop:nth-child(5) {
     grid-column: 1/3;
     grid-row: 3/5;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo5.webp);
 }
 
 .photo-prop:nth-child(6) {
     grid-column: 3/4;
     grid-row: 3/5;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo6.webp);
 }
 
 .photo-prop:nth-child(7) {
     grid-column: 4/6;
     grid-row: 3/5;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo7.webp);
 }
 
 .photo-prop:nth-child(8) {
     grid-column: 6/7;
     grid-row: 3/5;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo8.webp);
 }
 
 @media (hover:hover) {
 
     .photo-prop:hover {
-        background-size: 102%;
+        background-size: 100%;
+        transition: all 0.2s linear 0.2s;
+    }
+
+    .photo-prop:nth-child(2):hover {
+        background-size: 90%;
     }
 }
 
@@ -505,7 +511,7 @@ ________________________________________________________________________________
 #laptop-mockup {
     grid-column: 1/7;
     grid-row: 3/11;
-    background: url(../images/laptop-mockup.png) no-repeat center center;
+    background: url(../images/laptop-mockup.webp) no-repeat center center;
     background-size: contain;
     mix-blend-mode: darken;
     perspective: 1000px;
@@ -712,74 +718,74 @@ ________________________________________________________________________________
 /* first slide */
 
 #dev-skill-1 {
-    background: url(../images/html.svg);
+    background: url(../images/icons/html.svg);
 }
 
 #dev-skill-2 {
-    background: url(../images/css.svg);
+    background: url(../images/icons/css.svg);
 }
 
 #dev-skill-3 {
-    background: url(../images/js.webp);
+    background: url(../images/icons/js.webp);
     filter: brightness(1.1) contrast(1.2);
 }
 
 #dev-skill-4 {
-    background: url(../images/bootstrap.svg);
+    background: url(../images/icons/bootstrap.svg);
 }
 
 #dev-skill-5 {
-    background: url(../images/gsap.svg);
+    background: url(../images/icons/gsap.svg);
 }
 
 #dev-skill-6 {
-    background: url(../images/swiper.svg);
+    background: url(../images/icons/swiper.svg);
 }
 
 #dev-skill-7 {
-    background: url(../images/django.svg);
+    background: url(../images/icons/django.svg);
 }
 
 #dev-skill-8 {
-    background: url(../images/sqlite.svg);
+    background: url(../images/icons/sqlite.svg);
 }
 
 /* second slide */
 
 #prog-skill-1 {
-    background: url(../images/cpp.svg);
+    background: url(../images/icons/cpp.svg);
 }
 
 #prog-skill-2 {
-    background: url(../images/java.svg);
+    background: url(../images/icons/java.svg);
 }
 
 #prog-skill-3 {
-    background: url(../images/js.webp);
+    background: url(../images/icons/js.webp);
     filter: brightness(1.1) contrast(1.2);
 }
 
 #prog-skill-4 {
-    background: url(../images/python.svg);
+    background: url(../images/icons/python.svg);
 }
 
 /* third slide */
 
 #tool-1 {
-    background: url(../images/git.svg);
+    background: url(../images/icons/git.svg);
 }
 
 #tool-2 {
-    background: url(../images/github.svg);
+    background: url(../images/icons/github.svg);
 }
 
 #tool-3 {
-    background: url(../images/vscode.svg);
+    background: url(../images/icons/vscode.svg);
     filter: brightness(1.1) contrast(1.2);
 }
 
 #tool-4 {
-    background: url(../images/figma.svg);
+    background: url(../images/icons/figma.svg);
 }
 
 
