--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,34 @@
+:root {
+    /* COLOR PALETTE */
+    --blue1: #d4eff9;
+    --blue2: #24c6dc;
+    --blue3: #3fa9e8;
+    --blue4: #6da7ff;
+    --blue4-lo: #6da7ff9f;
+    --blue5: #478ff9;
+    --blue6: #00308a;
+    --blue6-lo: #00308a5e;
+    /* --blue5 is the primary color, lo = low-opacity */
+
+    --violet1: #6d7bcc;
+    --violet2: #514a9d;
+
+    --shade-l: #f5f5f5dd;
+    --shade-m: #e2e2f16c;
+    --shade-d: #828282a7;
+    --shade-t: #656564f9;
+    --shade-vd: #000000ac;
+    /* t = text, l = light, m = medium, d = dark, vd = very-dark */
+
+    --glass-bg: #1c0c130d;
+    --glass-border: #ffffff1a;
+
+    --fs-h1: 5rem;
+    --fs-h2: 4rem;
+    --fs-h3: 3rem;
+    --fs-p: 1rem;
+}
+
 * {
     font-family: 'Calibri', sans-serif;
     box-sizing: border-box;
@@ -10,16 +41,16 @@
     transition: all .2s ease-out;
     scroll-behavior: smooth;
     -webkit-tap-highlight-color: transparent;
-    /* cursor: default; */
+    /* cursor: none; */
     user-select: text;
 }
 
 ::selection {
-    color: #1900fd;
+    color: blue;
 }
 
 html {
-    font-size: 62.5%;
+    /* font-size: 62.5%; */
     overflow-x: hidden;
     scroll-snap-type: y mandatory;
     /* -webkit-font-smoothing: antialiased; */
@@ -30,16 +61,16 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-    background: rgb(255, 255, 255);
+    background: white;
 }
 
 body::-webkit-scrollbar-thumb {
-    background: rgb(63, 61, 86);
+    background: var(--shade-d);
     border-radius: 5rem;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-    background: rgb(38, 37, 52);
+    background: var(--shade-vd);
 }
 
 #preloader {
@@ -54,7 +85,7 @@ body::-webkit-scrollbar-thumb:hover {
     width: 100vw;
     overflow-y: none;
     background-attachment: fixed;
-    background: #ffffff;
+    background: white;
     transition: transform 0.5s ease-out;
 }
 
@@ -72,7 +103,7 @@ body::-webkit-scrollbar-thumb:hover {
     font-size: 18px;
     font-family: monospace;
     color: transparent;
-    background: linear-gradient(to right, #478ff9, #ff0000) no-repeat;
+    background: linear-gradient(to right, var(--blue5), red) no-repeat;
     background-clip: text;
     -webkit-background-clip: text;
     background-size: 40vw 30px;
@@ -141,12 +172,12 @@ body::-webkit-scrollbar-thumb:hover {
     box-sizing: content-box;
     border-radius: 0 0 40% 40%;
     -webkit-mask:
-        linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
-        linear-gradient(#000 0 0);
+        linear-gradient(black 0 0) bottom/4px 2px no-repeat,
+        linear-gradient(black 0 0);
     -webkit-mask-composite: destination-out;
     mask-composite: exclude;
     background:
-        linear-gradient(var(--d, 0deg), var(--c2) 50%, #0000 0) bottom /100% 205%,
+        linear-gradient(var(--d, 0deg), var(--c2) 50%, black 0) bottom /100% 205%,
         linear-gradient(var(--c2) 0 0) center/0 100%;
     background-repeat: no-repeat;
     animation: inherit;
@@ -166,7 +197,7 @@ body::-webkit-scrollbar-thumb:hover {
     }
 
     100% {
-        transform: rotate(0.5turn)
+        transform: rotate(0.5turn);
     }
 }
 
@@ -174,12 +205,12 @@ body::-webkit-scrollbar-thumb:hover {
 
     10%,
     70% {
-        background-size: 100% 205%, var(--s, 0) 100%
+        background-size: 100% 205%, var(--s, 0) 100%;
     }
 
     70%,
     100% {
-        background-position: top, center
+        background-position: top, center;
     }
 }
 
@@ -190,7 +221,7 @@ ________________________________________________________________________________
 
 
 main {
-    background-color: #ffffff;
+    background-color: white;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23e0f4fc' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");
     padding: 0;
     z-index: -100;
@@ -206,18 +237,13 @@ section {
 .section-heading {
     grid-column: 1/7;
     grid-row: 1/2;
-    color: #00308a;
+    color: var(--blue6);
     text-align: center;
     text-decoration: overline;
-    text-decoration-color: #478ff9;
+    text-decoration-color: var(--blue5);
     text-decoration-thickness: 6px;
 }
 
-.dark-bg {
-    background-color: rgb(223, 220, 220);
-    opacity: 0.6;
-    transition: all 0.5s ease-in-out;
-}
 
 
 /*
@@ -292,4 +318,16 @@ ________________________________________________________________________________
         transform: translate(0 0);
         filter: hue-rotate(360deg);
     }
+}
+
+.dialog-bg {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--shade-vd);
+    z-index: 94;
+    display: none;
 }
