--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -1,3 +1,17 @@
+/* #cursor {
+    position: absolute !important;
+    display: inline-block;
+    background-color: #478ef93e;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 2px solid blue;
+    pointer-events: none;
+    z-index: 200;
+} */
+
+
+
 /*
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++🏷️👇HEADER👇🏷️++++++++++++++++++++++++++++++++++++++++++++++++++
 _______________________________________________________________________________________________________________________________*/
@@ -10,8 +24,8 @@ header {
     width: 100vw;
     top: 0;
     backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 0px 2px 10px rgba(130, 130, 130, 0.655);
+    background-color: var(--shade-l);
+    box-shadow: 0px 2px 10px var(--shade-d);
     z-index: 90;
 }
 
@@ -36,14 +50,13 @@ header {
     padding: 0px 5vh 0px 5vh;
     font-size: 16px;
     letter-spacing: 0.8px;
-    color: #000;
-    /* color: #00308a; */
+    color: black;
 }
 
 @media (hover:hover) {
 
     .nav li a:hover {
-        background-color: rgba(226, 226, 241, 0.425);
+        background-color: var(--shade-m);
         cursor: pointer;
     }
 }
@@ -53,7 +66,7 @@ header h1 {
     top: 0px;
     left: 7vw;
     height: 100%;
-    color: rgb(0, 0, 0);
+    color: black;
     font-size: 40px;
     font-family: 'Courier New', Courier, monospace;
     cursor: pointer;
@@ -110,7 +123,7 @@ ________________________________________________________________________________
     top: 56%;
     left: 50%;
     transform: translate(73%, 0%);
-    background: linear-gradient(135deg, #FFFFFF -65%, #3FA9E8 85%);
+    background: linear-gradient(135deg, white -65%, var(--blue3) 85%);
     /* z-index: -1; */
 }
 
@@ -122,7 +135,7 @@ ________________________________________________________________________________
     top: 56%;
     left: 50%;
     transform: translate(-165%, -38%);
-    background: linear-gradient(80deg, #6D7BCC 0%, #24C6DC 200%);
+    background: linear-gradient(80deg, var(--violet1) 0%, var(--blue2) 200%);
     /* z-index: -1; */
 }
 
@@ -130,17 +143,14 @@ ________________________________________________________________________________
     grid-column: 1/7;
     grid-row: 4/11;
     margin: 0vh 10vw 2vh 10vw;
-    background: #1c0c130d url(../images/noise.svg);
+    background: var(--glass-bg) url(../images/noise.svg);
     backdrop-filter: blur(60px);
     border-radius: 15px;
-    border: 2px solid rgba(255, 255, 255, 0.1);
+    border: 2px solid var(--glass-border);
 }
 
 .profile-photo {
     position: absolute;
-    /* top: 13vh;
-    left: 50%;
-    transform: translateX(-50%); */
     grid-row: 3/5;
     grid-column: 3/5;
     display: grid;
@@ -148,9 +158,9 @@ ________________________________________________________________________________
     height: 25vh;
     width: 25vh;
     border-radius: 50%;
-    background: #1a1a1a url(../images/s2.jpg) no-repeat center center;
+    background: black url(../images/s2.jpg) no-repeat center center;
     background-size: contain;
-    border: 2px solid #478ff9;
+    border: 2px solid var(--blue5);
     z-index: 40;
     cursor: pointer;
 }
@@ -168,8 +178,8 @@ ________________________________________________________________________________
     z-index: -1;
     border-top: 2px solid transparent;
     border-bottom: 2px solid transparent;
-    border-left: 2px solid #478ff9;
-    border-right: 2px solid #478ff9;
+    border-left: 2px solid var(--blue5);
+    border-right: 2px solid var(--blue5);
     animation: rotate 5s linear infinite;
 }
 
@@ -181,29 +191,17 @@ ________________________________________________________________________________
 
 /* transform: translate(-50%, -50%) translateZ(-1px); */
 
-.dialog-bg {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.675);
-    z-index: 94;
-    display: none;
-}
-
 #profile-story {
     position: fixed;
-    box-shadow: 1px 1px 10px rgb(0, 0, 0);
+    box-shadow: 1px 1px 10px black;
     border-radius: 12px;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     top: 5vh;
     left: 50%;
     transform: translate(-50%, 0);
     min-height: 90vh;
     width: 30vw;
-    z-index: 95;
+    z-index: 100;
     /* transform-style: preserve-3d; */
 }
 
@@ -233,7 +231,7 @@ ________________________________________________________________________________
     border-radius: 12px;
 }
 
-#resume-container button {
+.dialog-close {
     position: absolute;
     bottom: 2%;
     left: 50%;
@@ -243,7 +241,7 @@ ________________________________________________________________________________
     display: grid;
     place-content: center;
     font-size: 40px;
-    background-color: rgb(245, 245, 245);
+    background-color: var(--shade-l);
     box-shadow: 1px 1px 5px black;
     border-radius: 50%;
     cursor: pointer;
@@ -261,7 +259,7 @@ ________________________________________________________________________________
     /* -webkit-text-stroke: 1px;
     -webkit-text-stroke-color: #3faae87b; */
     color: transparent;
-    background: linear-gradient(to left, #24C6DC, #3FA9E8, #6D7BCC, #514A9D) no-repeat center center;
+    background: linear-gradient(to left, var(--blue2), var(--blue3), var(--violet1), var(--violet2)) no-repeat center center;
     /* background-size: 90vw 40px; */
     background-clip: text;
     -webkit-background-clip: text;
@@ -272,7 +270,7 @@ ________________________________________________________________________________
 
 @keyframes color {
     100% {
-        color: #3faae87b;
+        color: var(--blue4-lo);
         /* -webkit-text-fill-color: transparent;
         -webkit-text-stroke: 1px;
         -webkit-text-stroke-color: #3faae87b; */
@@ -293,10 +291,9 @@ ________________________________________________________________________________
     font-size: 17px;
     letter-spacing: 0.8px;
     text-align: center;
-    color: rgba(101, 101, 100, 0.975);
+    color: var(--shade-t);
     line-height: 30px;
     width: 100%;
-    /* border: 2px solid green; */
     z-index: 40;
 }
 
@@ -322,14 +319,15 @@ ________________________________________________________________________________
     font-weight: bold;
     font-size: 12px;
     letter-spacing: 1px;
-    background-color: #478ff9;
+    background-color: var(--blue5);
+    text-shadow: .5px .5px .5px var(--shade-vd);
 }
 
 @media (hover:hover) {
 
     .button-on-home button:hover {
-        box-shadow: 3px 3px 2px #514A9D;
-        background-image: linear-gradient(-45deg, #3FA9E8, #6D7BCC, #478ff9, #6D7BCC);
+        box-shadow: 3px 3px 2px var(--violet2);
+        background-image: linear-gradient(-45deg, var(--blue3), var(--violet1), var(--blue5), var(--violet1));
         background-size: 500%;
         animation: button-color 4s alternate infinite;
     }
@@ -363,7 +361,7 @@ ________________________________________________________________________________
 
 #icons-on-home a i {
     cursor: pointer;
-    color: #6da7ff;
+    color: var(--blue4);
     font-size: 25px !important;
 }
 
@@ -372,7 +370,7 @@ ________________________________________________________________________________
     grid-row: 10/11;
     text-align: center;
     font-size: 45px;
-    color: #6da7ff9f;
+    color: var(--blue4-lo);
     z-index: 40;
 }
 
@@ -420,13 +418,32 @@ ________________________________________________________________________________
     grid-gap: 2vh;
     margin-top: 5vh;
     padding-top: 10vh;
+    cursor: zoom-in;
+}
+
+#photos-dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 90vh;
+    width: 80vw;
+    border-radius: 12px;
+    z-index: 100;
+    background-color: var(--shade-vd);
+    backdrop-filter: blur(5px);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    transition: none;
+    cursor: default;
 }
 
 .photo-prop {
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid black;
     background-color: black;
     border-radius: 15px;
-    background-size: 130%;
+    background-size: 120%;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -441,7 +458,7 @@ ________________________________________________________________________________
     grid-column: 2/4;
     grid-row: 1/3;
     background-image: url(../images/myphotos/photo2.webp);
-    background-size: 115%;
+    background-size: 105%;
 }
 
 .photo-prop:nth-child(3) {
@@ -484,7 +501,7 @@ ________________________________________________________________________________
 
     .photo-prop:hover {
         background-size: 100%;
-        transition: all 0.2s linear 0.2s;
+        transition: all 0.2s ease-out;
     }
 
     .photo-prop:nth-child(2):hover {
@@ -503,6 +520,7 @@ ________________________________________________________________________________
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(10, 1fr);
+    place-items: center;
     height: 100vh;
     margin-top: 15vh;
     padding-top: 10vh;
@@ -510,12 +528,29 @@ ________________________________________________________________________________
 
 #laptop-mockup {
     grid-column: 1/7;
-    grid-row: 3/11;
+    grid-row: 2/11;
+    margin-top: 2vh;
+    height: 98%;
+    width: 100%;
     background: url(../images/laptop-mockup.webp) no-repeat center center;
     background-size: contain;
     mix-blend-mode: darken;
-    perspective: 1000px;
+    border: 3px solid red;
 }
+
+#laptop-container {
+    grid-column: 1/7;
+    grid-row: 2/11;
+    margin-top: -5vh;
+    margin-left: -.5vw;
+    height: 67vh;
+    width: 612px;
+    border: 3px solid rgb(255, 208, 0);
+    z-index: 400;
+    /* background-color: blue; */
+}
+
+
 
 
 
@@ -533,6 +568,148 @@ ________________________________________________________________________________
     margin-top: 5vh;
     padding-top: 10vh;
 }
+
+#experience-wrapper {
+    position: relative;
+    grid-column: 1/7;
+    grid-row: 2/6;
+    margin-top: 2vh;
+    border: 1px solid black;
+}
+
+#experience-wrapper p {
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    height: 45px;
+    min-width: 45px;
+    font-size: 40px;
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+    background-color: var(--shade-l);
+    cursor: pointer;
+    z-index: 100;
+}
+
+#left-scroll {
+    left: 0;
+    transform: translate(-50%, -50%);
+    box-shadow: -1px 0px 2px black;
+}
+
+#right-scroll {
+    right: 0;
+    transform: translate(50%, -50%);
+    box-shadow: 1px 0px 2px black;
+}
+
+#experience-slider {
+    position: absolute;
+    inset: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    border: 4px solid red;
+}
+
+/* #experience-slider::-webkit-scrollbar {
+    display: none;
+} */
+
+.experience-slide {
+    height: 100%;
+    min-width: 100%;
+    display: flex;
+    /* border: 1px solid blue; */
+    cursor: default;
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    /* transition: all 2s ease; */
+}
+
+/* #experience-slide1 {
+    background-color: yellow;
+}
+
+#experience-slide2 {
+    background-color: lime;
+} */
+
+.experience-slide ul {
+    /* border: 2px solid red; */
+    display: flex;
+    height: 60%;
+    width: 100%;
+}
+
+.company-img1,
+.company-img2 {
+    height: 100%;
+    width: 100%;
+    background-color: transparent !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+    mix-blend-mode: darken;
+    filter: grayscale(0.9);
+
+}
+
+.company-img1:hover,
+.company-img2:hover {
+    filter: grayscale(0);
+    cursor: pointer;
+}
+
+.company-img1:nth-child(1) {
+    background: url(../images/icons/techfest.jpg);
+}
+
+.company-img1:nth-child(2) {
+    background: url(../images/icons/ieeeggv.jpg);
+    /* mix-blend-mode: difference; */
+}
+
+.company-img1:nth-child(3) {
+    background: url(../images/icons/gfgggv.jpg);
+}
+
+.company-img2:nth-child(1) {
+    background: url(../images/icons/gdscggv.jpg);
+}
+
+.company-img2:nth-child(2) {
+    background: url(../images/icons/gdscggv.jpg);
+}
+
+.company-img2:nth-child(3) {
+    background: url(../images/icons/gdscggv.jpg);
+}
+
+.company-img2:nth-child(4) {
+    background: url(../images/icons/gdscggv.jpg);
+}
+
+.company-img2:nth-child(5) {
+    background: url(../images/icons/gdscggv.jpg);
+}
+
+#experience-description {
+    grid-column: 1/7;
+    grid-row: 6/11;
+    /* margin-top: 2vh; */
+    height: 90%;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+    border: 2px solid green;
+
+}
+
 
 
 
@@ -554,18 +731,20 @@ ________________________________________________________________________________
 
 .ed-card {
     border-radius: 15px;
-    background: -webkit-linear-gradient(to left, #d4eff9, #FFFFFF);
-    background: linear-gradient(to left, #d4eff9, #FFFFFF);
+    background: -webkit-linear-gradient(to left, var(--blue1), white);
+    background: linear-gradient(to left, var(--blue1), white);
     display: flex;
     flex-direction: column;
     align-items: center;
     cursor: default;
+    padding: 5vh;
+    overflow: hidden;
 }
 
 @media (hover:hover) {
 
     .ed-card:hover {
-        box-shadow: 2px 2px 3px #00308a5e;
+        box-shadow: 2px 2px 3px var(--blue6-lo);
     }
 }
 
@@ -587,7 +766,6 @@ ________________________________________________________________________________
 .ed-img {
     height: 30%;
     width: 100%;
-    margin-top: 2vh;
     mix-blend-mode: darken;
     background-size: contain !important;
 }
@@ -606,19 +784,18 @@ ________________________________________________________________________________
 
 .ed-heading {
     font-size: 20px;
-    margin-top: 2vh;
 }
 
 .ed-article {
     font-size: 15px;
     line-height: 30px;
     letter-spacing: 0.8px;
-    color: rgba(101, 101, 100, 0.975);
+    color: var(--shade-t);
     text-align: justify;
     hyphens: auto;
     -webkit-hyphens: auto;
     word-spacing: -1.8px;
-    margin: 2vh 5vh 0 5vh;
+    margin-top: 2vh;
 }
 
 .mySwiper2 {
@@ -660,10 +837,9 @@ ________________________________________________________________________________
 
 .slide3 {
     text-align: center;
-    font-size: 18px;
-    background: #fff;
-    background: -webkit-linear-gradient(to left, #d4eff9, #FFFFFF);
-    background: linear-gradient(to left, #d4eff9, #FFFFFF);
+    /* font-size: 18px; */
+    background: -webkit-linear-gradient(to left, var(--blue1), white);
+    background: linear-gradient(to left, var(--blue1), white);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -671,15 +847,12 @@ ________________________________________________________________________________
 }
 
 .skill-heading {
-    font-size: 25px;
+    font-size: 27px;
     letter-spacing: 2px;
     text-align: center;
-    margin-top: 4vh;
-    margin-bottom: 4vh;
-    color: #00308a;
-    /* text-decoration: underline; */
-    text-decoration-color: #478ff9;
-    text-decoration-thickness: 3px;
+    margin-top: 4.5vh;
+    margin-bottom: 4.5vh;
+    color: var(--blue6);
 }
 
 .swiper-slide-class ul {
@@ -687,27 +860,29 @@ ________________________________________________________________________________
     place-content: center;
     place-items: center;
     grid-template-columns: repeat(3, 120px);
-    gap: 2vw;
-    padding-bottom: 4vh;
+    gap: 1.5vw;
+    padding-bottom: 4.5vh;
     list-style: none;
 }
 
 .swiper-slide-class ul li {
-    border: 1px dashed #478ff9;
+    border: 1px dashed var(--blue5);
     height: 60px;
-    width: 120px;
+    width: 110px;
     display: grid;
-    place-items: center;
+    place-content: center;
+    filter: grayscale(1);
 }
 
 .swiper-slide-class ul li:hover {
     border: 0;
-    box-shadow: 0px 0px 10px #478ef98b;
+    box-shadow: 0px 0px 10px var(--blue4-lo);
+    filter: grayscale(0) contrast(1.2);
 }
 
 .swiper-slide-class ul li figure {
     height: 50px;
-    width: 120px;
+    width: 45px;
     background-color: transparent !important;
     background-size: contain !important;
     background-repeat: no-repeat !important;
@@ -727,7 +902,6 @@ ________________________________________________________________________________
 
 #dev-skill-3 {
     background: url(../images/icons/js.webp);
-    filter: brightness(1.1) contrast(1.2);
 }
 
 #dev-skill-4 {
@@ -762,7 +936,6 @@ ________________________________________________________________________________
 
 #prog-skill-3 {
     background: url(../images/icons/js.webp);
-    filter: brightness(1.1) contrast(1.2);
 }
 
 #prog-skill-4 {
@@ -814,11 +987,11 @@ ________________________________________________________________________________
 
 footer {
     height: 20vh;
-    background-color: #00308a;
+    background-color: var(--blue6);
 }
 
 footer p {
-    color: #fff;
+    color: white;
     text-align: center;
     padding: 10px;
     font-size: 15px;
