--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -231,23 +231,6 @@ ________________________________________________________________________________
     border-radius: 12px;
 }
 
-.dialog-close {
-    position: absolute;
-    bottom: 2%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    height: 45px;
-    width: 45px;
-    display: grid;
-    place-content: center;
-    font-size: 40px;
-    background-color: var(--shade-l);
-    box-shadow: 1px 1px 5px black;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 101;
-}
-
 #hi2 {
     grid-column: 1/7;
     grid-row: 5/6;
@@ -570,131 +553,113 @@ ________________________________________________________________________________
 }
 
 #experience-wrapper {
-    position: relative;
     grid-column: 1/7;
     grid-row: 2/6;
-    margin-top: 2vh;
-    border: 1px solid black;
-}
-
-#experience-wrapper p {
-    position: absolute;
-    display: inline-block;
-    top: 50%;
-    height: 45px;
-    min-width: 45px;
-    font-size: 40px;
-    border-radius: 50%;
-    display: grid;
-    place-content: center;
-    background-color: var(--shade-l);
-    cursor: pointer;
-    z-index: 100;
-}
-
-#left-scroll {
-    left: 0;
-    transform: translate(-50%, -50%);
-    box-shadow: -1px 0px 2px black;
-}
-
-#right-scroll {
-    right: 0;
-    transform: translate(50%, -50%);
-    box-shadow: 1px 0px 2px black;
+    margin-top: 5vh;
+    position: relative;
+    /* border: 2px solid black; */
 }
 
 #experience-slider {
     position: absolute;
-    inset: 0;
     height: 100%;
     width: 100%;
-    display: flex;
-    overflow-y: hidden;
+    overflow-x: scroll;
     scroll-snap-type: x mandatory;
-    border: 4px solid red;
+    display: flex;
+    direction: rtl;
+    /* border: 3px solid gray; */
 }
 
-/* #experience-slider::-webkit-scrollbar {
+#experience-slider::-webkit-scrollbar {
     display: none;
-} */
+}
+
+#left-scroll {
+    position: absolute;
+    top: 80%;
+    left: 0;
+    transform: translate(-50%, -50%);
+    box-shadow: -1px 1px 5px black;
+}
+
+#right-scroll {
+    /* display: none; */
+    position: absolute;
+    top: 80%;
+    right: 0;
+    transform: translate(50%, -50%);
+    box-shadow: 1px 1px 5px black;
+}
 
 .experience-slide {
-    height: 100%;
-    min-width: 100%;
-    display: flex;
-    /* border: 1px solid blue; */
-    cursor: default;
+    position: relative;
     scroll-snap-align: center;
-    scroll-snap-stop: always;
-    /* transition: all 2s ease; */
-}
-
-/* #experience-slide1 {
-    background-color: yellow;
-}
-
-#experience-slide2 {
-    background-color: lime;
-} */
-
-.experience-slide ul {
-    /* border: 2px solid red; */
-    display: flex;
-    height: 60%;
-    width: 100%;
-}
-
-.company-img1,
-.company-img2 {
+    min-width: calc(100% / 3);
     height: 100%;
+    /* border: 2px solid pink; */
+    overflow: hidden;
+}
+
+.experience-slide-on-click {
+    background-size: 28.7% !important;
+    filter: grayscale(0) !important;
+}
+
+#experience-timeline {
+    position: absolute;
+    top: 80%;
+    right: 0;
+    width: calc(100% + 100% /3);
+    height: 6px;
+    background-color: var(--blue5);
+}
+
+.experience-time-dot {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -31%);
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    background-color: var(--blue6);
+    z-index: 50;
+}
+
+.company-img {
     width: 100%;
+    height: 55%;
+    display: flex;
     background-color: transparent !important;
-    background-size: contain !important;
     background-repeat: no-repeat !important;
     background-position: center center !important;
     mix-blend-mode: darken;
     filter: grayscale(0.9);
+    border-right: 2px solid black;
 
 }
 
-.company-img1:hover,
-.company-img2:hover {
-    filter: grayscale(0);
-    cursor: pointer;
+.company-img1 {
+    background: url(../images/icons/gdscggv.jpg);
+    background-size: 25%;
+    border: 0;
 }
 
-.company-img1:nth-child(1) {
-    background: url(../images/icons/techfest.jpg);
-}
-
-.company-img1:nth-child(2) {
-    background: url(../images/icons/ieeeggv.jpg);
-    /* mix-blend-mode: difference; */
-}
-
-.company-img1:nth-child(3) {
+.company-img2 {
     background: url(../images/icons/gfgggv.jpg);
+    background-size: 25%;
 }
 
-.company-img2:nth-child(1) {
-    background: url(../images/icons/gdscggv.jpg);
+.company-img3 {
+    background: url(../images/icons/techfest.jpg);
+    background-size: 25%;
 }
 
-.company-img2:nth-child(2) {
-    background: url(../images/icons/gdscggv.jpg);
-}
-
-.company-img2:nth-child(3) {
-    background: url(../images/icons/gdscggv.jpg);
-}
-
-.company-img2:nth-child(4) {
-    background: url(../images/icons/gdscggv.jpg);
-}
-
-.company-img2:nth-child(5) {
-    background: url(../images/icons/gdscggv.jpg);
+.company-img4 {
+    background: url(../images/icons/ieeeggv.jpg);
+    background-size: 25%;
+    /* mix-blend-mode: difference; */
 }
 
 #experience-description {
@@ -707,9 +672,27 @@ ________________________________________________________________________________
     align-items: center;
     justify-content: center; */
     border: 2px solid green;
-
 }
 
+#company-name-wrapper {
+    position: relative;
+    height: 6vh;
+    overflow: hidden;
+    margin-top: 2vh;
+}
+
+.company-name {
+    position: absolute;
+    top: -100%;
+    left:50%;
+    transform: translate(-50%, 0);
+    font-size: 26px;
+    font-weight: bold;
+    min-height: 100%;
+    letter-spacing: 1px;
+    color: var(--blue6);
+    text-align: center;
+}
 
 
 
@@ -847,7 +830,7 @@ ________________________________________________________________________________
 }
 
 .skill-heading {
-    font-size: 27px;
+    font-size: 26px;
     letter-spacing: 2px;
     text-align: center;
     margin-top: 4.5vh;
@@ -862,7 +845,6 @@ ________________________________________________________________________________
     grid-template-columns: repeat(3, 120px);
     gap: 1.5vw;
     padding-bottom: 4.5vh;
-    list-style: none;
 }
 
 .swiper-slide-class ul li {
@@ -881,8 +863,8 @@ ________________________________________________________________________________
 }
 
 .swiper-slide-class ul li figure {
-    height: 50px;
-    width: 45px;
+    height: 40px;
+    width: 40px;
     background-color: transparent !important;
     background-size: contain !important;
     background-repeat: no-repeat !important;
