--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -77,7 +77,7 @@ header h1 {
 }
 
 header button {
-    all:unset;
+    all: unset;
     position: absolute;
     top: 0px;
     right: 7vw;
@@ -299,6 +299,7 @@ ________________________________________________________________________________
     font-weight: bold;
     font-size: 12px;
     background-color: var(--blue5);
+    text-shadow: .5px .5px .5px var(--shade-vd);
 }
 
 @media (hover:hover) {
@@ -395,54 +396,61 @@ ________________________________________________________________________________
 .photo-prop:nth-child(1) {
     grid-column: 1/3;
     grid-row: 1/2;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo1.webp);
 }
 
 .photo-prop:nth-child(2) {
     grid-column: 3/7;
     grid-row: 1/2;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo2.webp);
+    background-size: 105%;
 }
 
 .photo-prop:nth-child(3) {
     grid-column: 1/5;
     grid-row: 2/3;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo4.webp);
 }
 
 .photo-prop:nth-child(4) {
     grid-column: 5/7;
     grid-row: 2/3;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo3.webp);
 }
 
 .photo-prop:nth-child(5) {
     grid-column: 1/3;
     grid-row: 3/4;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo6.webp);
 }
 
 .photo-prop:nth-child(6) {
     grid-column: 3/7;
     grid-row: 3/4;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo5.webp);
 }
 
 .photo-prop:nth-child(7) {
     grid-column: 1/5;
     grid-row: 4/5;
-    background-image: url(../images/bg.webp);
+    background-image: url(../images/myphotos/photo7.webp);
 }
 
 .photo-prop:nth-child(8) {
     grid-column: 5/7;
     grid-row: 4/5;
-    background-image: url(../images/home2.webp);
+    background-image: url(../images/myphotos/photo8.webp);
 }
 
 @media (hover:hover) {
+
     .photo-prop:hover {
-        background-size: 102%;
+        background-size: 100%;
+        transition: all 0.2s ease-out;
+    }
+
+    .photo-prop:nth-child(2):hover {
+        background-size: 90%;
     }
 }
 
@@ -496,10 +504,105 @@ ________________________________________________________________________________
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(10, 1fr);
+    padding: 10vh 7vw 0 7vw;
     height: 100vh;
     margin-top: 5vh;
-    padding-top: 10vh;
 }
+
+#experience-wrapper {
+    grid-column: 1/7;
+    grid-row: 2/6;
+    margin-top: 5vh;
+    position: relative;
+    border: 2px solid black;
+}
+
+
+#experience-slider {
+    position: absolute;
+    height: 60%;
+    width: 100%;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    display: flex;
+    direction: rtl;
+}
+
+#experience-slider::-webkit-scrollbar {
+    display: none;
+}
+
+#experience-slider div {
+    scroll-snap-align: center;
+    min-width: 100%;
+    height: 100%;
+    border: 2px solid red;
+    display: flex;
+}
+
+#left-scroll {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+    box-shadow: -1px 1px 5px black;
+}
+
+#right-scroll {
+    display: none;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(50%, -50%);
+    box-shadow: 1px 1px 5px black;
+}
+
+.company-img {
+    height: 60%;
+    width: calc(100% / 3);
+    background-color: transparent !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+    mix-blend-mode: darken;
+    /* filter: grayscale(0.9); */
+
+}
+
+.company-img:hover {
+    /* filter: grayscale(0); */
+    cursor: pointer;
+}
+
+.company-img:nth-child(1) {
+    background: url(../images/icons/gdscggv.jpg);
+}
+
+.company-img:nth-child(2) {
+    background: url(../images/icons/gfgggv.jpg);
+}
+
+.company-img:nth-child(3) {
+    background: url(../images/icons/techfest.jpg);
+}
+
+.company-img:nth-child(4) {
+    background: url(../images/icons/ieeeggv.jpg);
+    /* mix-blend-mode: difference; */
+}
+
+#experience-description {
+    grid-column: 1/7;
+    grid-row: 6/11;
+    /* margin-top: 2vh; */
+    height: 90%;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+    border: 2px solid green;
+}
+
 
 
 
@@ -513,11 +616,10 @@ ________________________________________________________________________________
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(10, 1fr);
-    padding: 0 7vw 0 7vw;
+    padding: 10vh 7vw 0 7vw;
     height: 75vh;
     grid-gap: 5vh;
     margin-top: 5vh;
-    padding-top: 10vh;
 }
 
 .ed-card {
@@ -641,7 +743,6 @@ ________________________________________________________________________________
 .slide3 {
     text-align: center;
     font-size: 18px;
-    background: white;
     background: -webkit-linear-gradient(to left, var(--blue1), white);
     background: linear-gradient(to left, var(--blue1), white);
     display: flex;
@@ -649,6 +750,122 @@ ________________________________________________________________________________
     align-items: center;
     border-radius: 8px;
 }
+
+.skill-heading {
+    font-size: 24px;
+    letter-spacing: 2px;
+    text-align: center;
+    margin: 4.5vh 0 4.5vh 0;
+    color: var(--blue6);
+}
+
+.swiper-slide-class ul {
+    display: grid;
+    place-content: center;
+    place-items: center;
+    grid-template-columns: repeat(3, 90px);
+    gap: 3vw;
+    padding-bottom: 4.5vh;
+    /* border: 2px solid red; */
+}
+
+.swiper-slide-class ul li {
+    border: 1px dashed var(--blue5);
+    height: 60px;
+    width: 100%;
+    padding: 5vw 0 5vw 0;
+    display: grid;
+    place-content: center;
+    /* filter: grayscale(1); */
+}
+
+.swiper-slide-class ul li:hover {
+    border: 0;
+    box-shadow: 0px 0px 10px var(--blue4-lo);
+    /* filter: grayscale(0) contrast(1.2); */
+}
+
+.swiper-slide-class ul li figure {
+    height: 50px;
+    width: 45px;
+    background-color: transparent !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+    mix-blend-mode: darken;
+}
+
+/* first slide */
+
+#dev-skill-1 {
+    background: url(../images/icons/html.svg);
+}
+
+#dev-skill-2 {
+    background: url(../images/icons/css.svg);
+}
+
+#dev-skill-3 {
+    background: url(../images/icons/js.webp);
+}
+
+#dev-skill-4 {
+    background: url(../images/icons/bootstrap.svg);
+}
+
+#dev-skill-5 {
+    background: url(../images/icons/gsap.svg);
+}
+
+#dev-skill-6 {
+    background: url(../images/icons/swiper.svg);
+}
+
+#dev-skill-7 {
+    background: url(../images/icons/django.svg);
+}
+
+#dev-skill-8 {
+    background: url(../images/icons/sqlite.svg);
+}
+
+/* second slide */
+
+#prog-skill-1 {
+    background: url(../images/icons/cpp.svg);
+}
+
+#prog-skill-2 {
+    background: url(../images/icons/java.svg);
+}
+
+#prog-skill-3 {
+    background: url(../images/icons/js.webp);
+}
+
+#prog-skill-4 {
+    background: url(../images/icons/python.svg);
+}
+
+/* third slide */
+
+#tool-1 {
+    background: url(../images/icons/git.svg);
+}
+
+#tool-2 {
+    background: url(../images/icons/github.svg);
+}
+
+#tool-3 {
+    background: url(../images/icons/vscode.svg);
+    filter: brightness(1.1) contrast(1.2);
+}
+
+#tool-4 {
+    background: url(../images/icons/figma.svg);
+}
+
 
 
 
