--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -83,7 +83,7 @@ header h1 {
     left: 7vw;
     height: 100%;
     color: black;
-    font-size: 40px;
+    font-size: 35px;
     font-family: 'Courier New', Courier, monospace;
     cursor: pointer;
     display: flex;
@@ -164,7 +164,7 @@ ________________________________________________________________________________
     height: 20vh;
     width: 20vh;
     border-radius: 50%;
-    background: black url(../images/s2.jpg) no-repeat center center;
+    background: black url(../images/dp.gif) no-repeat center center;
     background-size: contain;
     border: 2px solid var(--blue5);
     z-index: 40;
@@ -1244,7 +1244,7 @@ ________________________________________________________________________________
 }
 
 #github-commits::after {
-    content: "Commits made on Github*";
+    content: "Total Contributions*";
     position: absolute;
     bottom: 0;
     left: 0;
